--- a/index.html
+++ b/index.html
@@ -43,27 +43,12 @@
          <p class="ejemplo">¡Por las webas vas si nunca te dejan jugar!</p>
       </div>
       <div class="col-md-2">
-        <img src="https://lh3.googleusercontent.com/proxy/ezplrm27mhGSuxgFDAX_bbgtkAHfjPsND4E5ZU55p15nU7HoVslTCutpBiTZAw2l0YuKlIR6-_Eak8O3aEprAA7dPQ6F5M4SzO6oHyIQ1JcPvGgsAB8M4smTyMCm0zRMmzHtiw" width="150" height="80" alt="flecha">
+        <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c43b.png" width="150" height="80" alt="flecha">
      </div>
          <div class="col-md-5">
          <p class="resultado">¡Pir lis wibis vis si ninci ti dijin jigir!</p>
       </div>
-      <!-- <div class="col-md-1">
-      </div> -->
     </div>
-
-    <div class="row">
-      <div class="col-md-12">
-        <form id="form">
-          <div class="form-group">
-            <label for="example-form"></label>
-            <input class="form-control" id="example-form-input" placeholder="pega acá lo que te dijo la maldita o el desgraciado" name="example-form" type="text">
-          </div>
-          <button id="button" type="button" class="btn btn-default">¡Dale pe!</button>
-        </form>
-      </div>
-    </div>
-
     <div class="row">
       <div class="col-md-12">
         <h1>
@@ -71,6 +56,19 @@
         </h1>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <form id="form">
+          <div class="form-group form-control-lg">
+            <input class="form-control input-lg form-control-lg" id="example-form-input" placeholder="Pega acá lo que te dijo la maldita o el desgraciado" name="example-form" type="text">
+          </div>
+          <button id="button" type="button" class="btn btn-default">¡Dale pe!</button>
+        </form>
+      </div>
+    </div>
+
+    
   </div>
 </body>
 <script src="index.js"></script>
