--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <br>
   <div class="container">
     <div class="jumbotron">
-      <h1 class="display-4">¡Cambia vocales por ies!</h1>
-      <p class="lead">¿Te da flojera cambiar todas tus vocales por ies pero quieres
+      <h1 class="display-4">¡Cambia vocales por íes!</h1>
+      <p class="lead">¿Te da flojera cambiar todas tus vocales por íes pero necesitas
         expresar tu disconformidad con lo que te dijeron? ¡Usa esto!</p>
       <br>
       <div class="row">
