--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <div class="col-md-2">
         </div>
         <div class="col-md-4">
-          <img src="https://memegenerator.net/img/images/300x300/15097940.jpg" height=200, width=200>
+          <img src="images/i2.jpg" height=200, width=200>
         </div>
         <div class="col-md-1">
         </div>
 
         <div class="col-md-4">
 
-          <img src="https://memegenerator.net/img/images/16763161.jpg" height=200, width=200>
+          <img src="images/i1.jpg" height=200, width=200>
 
         </div>
         <div class="col-md-1">
@@ -44,7 +44,7 @@
          <p class="ejemplo">¡Por las webas vas si nunca te dejan jugar!</p>
       </div>
       <div class="col-md-2">
-        <img src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c43b.png" width="150" height="80" alt="flecha">
+        <img src="images/flecha.png" width="150" height="80" alt="flecha">
      </div>
          <div class="col-md-5">
          <p class="resultado">¡Pir lis wibis vis si ninci ti dijin jigir!</p>
