--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
         expresar tu disconformidad con lo que te dijeron? ¡Usa esto!</p>
       <br>
       <div class="row">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-2"> -->
+        <!-- </div> -->
+        <div class="col-md-6">
           <img src="images/i2.jpg" height=200, width=200>
         </div>
         <div class="col-md-1">
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-6">
 
           <img src="images/i1.jpg" height=200, width=200>
 
         </div>
-        <div class="col-md-1">
-        </div>
+        <!-- <div class="col-md-1"> -->
+        <!-- </div> -->
       </div>
  
     </div>
