--- a/index.html
+++ b/index.html
@@ -20,34 +20,25 @@
         expresar tu disconformidad con lo que te dijeron? ¡Usa esto!</p>
       <br>
       <div class="row">
-        <!-- <div class="col-md-2"> -->
-        <!-- </div> -->
         <div class="col-md-6">
           <img src="images/i2.jpg" height=200, width=200>
         </div>
         <div class="col-md-1">
         </div>
-
         <div class="col-md-6">
-
           <img src="images/i1.jpg" height=200, width=200>
-
         </div>
-        <!-- <div class="col-md-1"> -->
-        <!-- </div> -->
       </div>
- 
     </div>
-    
     <div class="row">
       <div class="col-md-5">
-         <p class="ejemplo">¡Por las webas vas si nunca te dejan jugar!</p>
+        <p class="ejemplo">¡Por las webas vas si nunca te dejan jugar!</p>
       </div>
       <div class="col-md-2">
         <img src="images/flecha.png" width="150" height="80" alt="flecha">
-     </div>
-         <div class="col-md-5">
-         <p class="resultado">¡Pir lis wibis vis si ninci ti dijin jigir!</p>
+      </div>
+      <div class="col-md-5">
+        <p class="resultado">¡Pir lis wibis vis si ninci ti dijin jigir!</p>
       </div>
     </div>
     <div class="row">
@@ -57,19 +48,17 @@
         </h1>
       </div>
     </div>
-
     <div class="row">
       <div class="col-md-12">
         <form id="form">
           <div class="form-group form-control-lg">
-            <input class="form-control input-lg form-control-lg" id="example-form-input" placeholder="Pega acá lo que te dijo la maldita o el desgraciado" name="example-form" type="text">
+            <input class="form-control input-lg form-control-lg" id="example-form-input"
+              placeholder="Pega acá lo que te dijo la maldita o el desgraciado" name="example-form" type="text">
           </div>
           <button id="button" type="button" class="btn btn-default">¡Dale pe!</button>
         </form>
       </div>
     </div>
-
-    
   </div>
 </body>
 <br>
