--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <input class="form-control input-lg form-control-lg" id="example-form-input"
               placeholder="Pega acá lo que te dijo la maldita o el desgraciado" name="example-form" type="text">
           </div>
-          <button id="button" type="button" class="btn btn-default">¡Dale pe!</button>
+          <button id="button" type="button" class="btn btn-default btn-lg">¡Dale pe!</button>
         </form>
       </div>
     </div>
