--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <div class="row">
       <div id="copiar" class="col-md-12">
-      
+
       </div>
     </div>
 
@@ -75,9 +75,13 @@
             <input class="form-control input-lg form-control-lg" id="example-form-input"
               placeholder="¡Pega acá tu texto!" name="example-form" type="text">
           </div>
-          <button id="button" type="button" class="btn btn-default btn-lg">¡Dale pe!</button>
         </form>
       </div>
+      <div id="botones">
+      <button id="button" type="button" class="btn btn-default btn-lg">¡Dale pe!</button>
+      <button id="limpiar" type="button" class="btn btn-default btn-lg">Limpiar 1</button>
+      <button class="btn btn-default btn-lg" onClick="window.location.reload();">Limpiar 2</button>
+    </div>
     </div>
   </div>
 </body>
