boton final pa limpiar

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       </div>
       <div id="botones">
       <button id="button" type="button" class="btn btn-default btn-lg">¡Dale pe!</button>
-      <button id="limpiar" type="button" class="btn btn-default btn-lg">Limpiar 1</button>
-      <button class="btn btn-default btn-lg" onClick="window.location.reload();">Limpiar 2</button>
-      <button id="limpiar3" type="button" class="btn btn-default btn-lg">Limpiar 3</button>
+      <button id="limpiar" type="button" class="btn btn-default btn-lg">Limpiar</button>
+      <!-- <button class="btn btn-default btn-lg" onClick="window.location.reload();">Limpiar 2</button> -->
+      <!-- <button id="limpiar3" type="button" class="btn btn-default btn-lg">Limpiar 3</button> -->
     </div>
     </div>
   </div>
